crates/sources/src/scenarios/snapshots/sources__scenarios__test__schema_with_anchors.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables
---
DraftCatalog {
    collections: [
        DraftCollection {
            collection: test,
            scope: test://example/catalog.yaml#/collections/test,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "schema": "schema.json",
              "key": [
                "/a"
              ]
            },
            is_touch: 0,
        },
    ],
    fetches: [
        Fetch {
            depth: 1,
            resource: test://example/catalog.yaml,
        },
        Fetch {
            depth: 2,
            resource: test://example/schema.json,
        },
    ],
    imports: [
        Import {
            scope: test://example/catalog.yaml#/collections/test/schema,
            to_resource: test://example/schema.json,
        },
    ],
    resources: [
        Resource {
            resource: test://example/catalog.yaml,
            content_type: "CATALOG",
            content: ".. binary ..",
            content_dom: {"collections":{"test":{"key":["/a"],"schema":"schema.json"}}},
        },
        Resource {
            resource: test://example/schema.json,
            content_type: "JSON_SCHEMA",
            content: ".. binary ..",
            content_dom: {"$defs":{"lowercase":{"$anchor":"lowercase","type":"integer"},"matches":{"$anchor":"Match_es","type":"integer"},"punctuation":{"$anchor":"Spa ce","type":"integer"}},"type":"string"},
        },
    ],
}
