crates/sources/src/scenarios/snapshots/sources__scenarios__test__schema_with_inline.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables
---
DraftCatalog {
    collections: [
        DraftCollection {
            collection: test,
            scope: test://example/catalog.yaml#/collections/test,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "schema": {"additionalProperties":true,"type":"object"},
              "key": [
                "/some-key"
              ]
            },
            is_touch: 0,
        },
    ],
    fetches: [
        Fetch {
            depth: 1,
            resource: test://example/catalog.yaml,
        },
    ],
    resources: [
        Resource {
            resource: test://example/catalog.yaml,
            content_type: "CATALOG",
            content: ".. binary ..",
            content_dom: {"collections":{"test":{"key":["/some-key"],"schema":{"additionalProperties":true,"type":"object"}}}},
        },
    ],
}
