crates/sources/src/scenarios/snapshots/sources__scenarios__test__schema_with_references-2.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables
---
DraftCatalog {
    collections: [
        DraftCollection {
            collection: test,
            scope: test://example/catalog.yaml#/collections/test,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "schema": {"$defs":{"__flowInline1":{"$defs":{"a":{"$ref":"b#/$defs/c"}},"$id":"test://external/a"},"__flowInline2":{"$defs":{"c":{"$ref":"c"}},"$id":"test://external/b"},"__flowInline3":{"$id":"test://external/c","allOf":[true]}},"$id":"test://example/catalog.yaml?ptr=/collections/test/schema","$ref":"test://external/a#/$defs/a"},
              "key": [
                "/a"
              ]
            },
            is_touch: 0,
        },
    ],
    imports: [
        Import {
            scope: test://external/a#/$defs/a/$ref,
            to_resource: test://external/b,
        },
        Import {
            scope: test://external/b#/$defs/c/$ref,
            to_resource: test://external/c,
        },
    ],
}
