crates/sources/src/scenarios/snapshots/sources__scenarios__test__simple_catalog-2.snap
---
source: crates/sources/src/scenarios/mod.rs
expression: tables
---
DraftCatalog {
    collections: [
        DraftCollection {
            collection: a/collection,
            scope: test://example/catalog.yaml#/collections/a~1collection,
            expect_pub_id: NULL,
            data_plane_id: "0000000000000000",
            model: {
              "schema": {"$id":"test://example/schema","allOf":[true]},
              "key": [
                "/key"
              ],
              "projections": {
                "baz": {
                  "location": "/bing",
                  "partition": true
                },
                "foo": "/bar"
              }
            },
            is_touch: 0,
        },
    ],
    imports: [
        Import {
            scope: test://example/catalog.yaml#/import/0,
            to_resource: test://example/sibling,
        },
        Import {
            scope: test://example/catalog.yaml#/import/1,
            to_resource: test://example/sibling#/bad/fragment,
        },
        Import {
            scope: test://example/catalog.yaml#/import/2,
            to_resource: test://not/found,
        },
    ],
}
